fix: ME spacing 2

--- a/static/css/clean-blog.css
+++ b/static/css/clean-blog.css
@@ -1344,3 +1344,11 @@ ul.toc-box li:first-child {
 .histoire h3 .ME {
   letter-spacing: -14px;
 }
+
+.toc-box .toc-H2 .ME {
+  letter-spacing: -7px;
+}
+
+.toc-box .toc-H3 .ME {
+  letter-spacing: -5px;
+}
